--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -4,4 +4,4 @@ $text-color:#eee;
 
 $font-family:"segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
-$main-bgImage-path:'../img/background.jpg';
+$main-bgImage-path:'./img/background.jpg';
