--- a/src/abstracts/_mixin.scss
+++ b/src/abstracts/_mixin.scss
@@ -1,7 +1,7 @@
 @mixin transition($sec) {
     transition: all $sec;
     
-}
+};
 
 @mixin bgImage($height, $url) {
     height: $height;
@@ -13,4 +13,30 @@
     ),url($url);
     background-position: center center;
     background-size: cover;
-}
+};
+
+@mixin media-xsm {
+    @media screen and (min-width: 0px){
+        @content
+    }
+};
+@mixin media-sm {
+    @media screen and (min-width: 576px){
+        @content;
+    }
+};
+@mixin media-md {
+    @media screen and (min-width: 768px){
+        @content;
+    }
+};
+@mixin media-lg {
+    @media screen and (min-width: 1024px){
+        @content;
+    }
+};
+@mixin media-xl {
+    @media screen and (min-width: 1600px){
+        @content;
+    }
+};
