--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -19,3 +19,36 @@ footer.horizantal{
     padding: 1rem;
     @extend .link-style
 }
+
+footer.vertical{
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 1rem;
+    @extend .link-style;
+    .social-icons{
+        display: flex;
+        flex-direction: column;
+        position: fixed;
+        bottom: 1rem;
+    }
+    .copyright{
+        position: fixed;
+        bottom: 2rem;
+        right: 3rem;
+        transform: rotate(90deg) translate(-3rem, -5rem);
+    }
+}
+
+footer.middle{
+    // height: 0vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 1rem;
+    gap: 1rem;
+    margin-top: 3rem;
+    @extend .link-style;
+}
