--- a/src/pages/_contact.scss
+++ b/src/pages/_contact.scss
@@ -7,7 +7,7 @@
 }
 
 .contact{
-    height: 40vh;
+    height: 30vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -33,7 +33,7 @@
     }
 
     i{
-        color: $secondary-color;
+        color: $primary-color;
     }
 }
 
