--- a/src/components/_footer.scss
+++ b/src/components/_footer.scss
@@ -14,10 +14,22 @@
 footer.horizantal{
     height: 10vh;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: flex-end;
     padding: 1rem;
-    @extend .link-style
+    @extend .link-style;
+    .social-icons{
+        display: flex;
+        flex-direction: row;
+        position: fixed;
+        bottom: 1rem;
+    }
+    .copyright{
+        position: fixed;
+        bottom: 2rem;
+        right: 3rem;
+    }
 }
 
 footer.vertical{
@@ -35,7 +47,7 @@ footer.vertical{
     }
     .copyright{
         position: fixed;
-        bottom: 2rem;
+        bottom: 4rem;
         right: 3rem;
         transform: rotate(90deg) translate(-3rem, -5rem);
     }
