--- a/src/main.css
+++ b/src/main.css
@@ -15,6 +15,12 @@
   justify-content: space-between;
   flex-direction: column;
 }
+.about-bgImg-container .nav__list {
+  padding: 0.7rem;
+}
+.about-bgImg-container .nav__link {
+  font-size: 24px;
+}
 
 .about__bio-image {
   color: #eee;
@@ -22,10 +28,11 @@
 }
 .about__bio-image h2 {
   font-size: 3rem;
-  color: #1e453e;
+  color: #2c7c07;
 }
 .about__bio-image p {
   font-size: 1.2rem;
+  font-weight: 500;
   margin: 2rem;
 }
 
@@ -37,13 +44,17 @@
   margin: 2rem auto;
 }
 .about .about__job {
-  margin: 1rem;
   background: #1e453e;
-  padding: 1rem;
+  padding: 0rem 2rem;
   border-bottom: 5px solid;
 }
 .about .about__job h2, .about .about__job h3 {
   margin: 0.5rem 0rem;
+  font-size: 3rem;
+}
+.about .about__job p {
+  text-align: justify;
+  font-size: 1.5rem;
 }
 
 .contact-bgImg-container {
@@ -58,7 +69,7 @@
 }
 
 .contact {
-  height: 40vh;
+  height: 30vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -81,7 +92,7 @@
   color: #eee;
 }
 .contact i {
-  color: #1e453e;
+  color: #2c7c07;
 }
 
 .copyright {
@@ -97,13 +108,12 @@
 }
 
 .id {
-  height: 100%;
   width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  padding-bottom: 200px;
+  padding-top: 100px;
 }
 
 main {
@@ -139,16 +149,18 @@ main h2 {
 }
 .projects-bgImg-container .projects__bio-image {
   text-align: center;
+  font-size: 50px;
   margin-bottom: 1rem;
+}
+.projects-bgImg-container .projects__bio-image h2 {
+  color: #2c7c07;
 }
 
 .projects__items {
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   padding: 2rem 5rem;
   gap: 1rem 0rem;
+  display: flex;
+  flex-wrap: wrap;
 }
 .projects__item {
   width: 100%;
@@ -185,9 +197,21 @@ main h2 {
 footer.horizantal {
   height: 10vh;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
   padding: 1rem;
+}
+footer.horizantal .social-icons {
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  bottom: 1rem;
+}
+footer.horizantal .copyright {
+  position: fixed;
+  bottom: 2rem;
+  right: 3rem;
 }
 
 footer.vertical {
@@ -205,7 +229,7 @@ footer.vertical .social-icons {
 }
 footer.vertical .copyright {
   position: fixed;
-  bottom: 2rem;
+  bottom: 4rem;
   right: 3rem;
   transform: rotate(90deg) translate(-3rem, -5rem);
 }
