--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -4,13 +4,13 @@
 }
 
 .id{
-    height: 100%;
+    // height: 50%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
-    padding-bottom: 200px;
+    padding-top: 100px;
 }
 
 main{
