--- a/src/pages/_projects.scss
+++ b/src/pages/_projects.scss
@@ -5,25 +5,31 @@
     justify-content: space-between;
     .projects__bio-image{
         text-align: center;
+        font-size: 50px;
         margin-bottom: 1rem;
+
+        h2{
+            color: $primary-color;
+        }
     }
 }
 
 .projects{
     &__items{
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+        // width: 100%;
+        // justify-content: center;
         padding: 2rem 5rem;
         gap: 1rem 0rem;
-    }
+        display: flex;
+        flex-wrap: wrap;
+    };
 
     &__item{
         width: 100%;
         cursor: pointer;
         border-bottom: 5px solid $secondary-color;
         position: relative;
+
 
         img{
             width: 100%;
