--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,6 +1,7 @@
 $primary-color:#2c7c07;
 $secondary-color:#1e453e;
 $text-color:#eee;
+$silver-color:#797979;
 
 $font-family:"segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
