--- a/src/main.css
+++ b/src/main.css
@@ -157,32 +157,54 @@ main h2 {
 }
 
 .projects__items {
-  padding: 2rem 5rem;
-  gap: 1rem 0rem;
+  padding: 1rem 1rem;
+  gap: 1rem 1rem;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .projects__item {
-  width: 100%;
-  cursor: pointer;
-  border-bottom: 5px solid #1e453e;
+  justify-content: center;
   position: relative;
+  overflow: hidden;
+  width: 600px;
+  height: 300px;
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+}
+.projects__item p, .projects__item h2 {
+  color: black;
 }
 .projects__item img {
-  width: 100%;
+  width: 600px;
+  height: 300px;
 }
-.projects__item::after {
-  content: "";
-  height: 100%;
-  width: 100%;
-  background-color: #1e453e;
+.projects__item:hover .projects__content {
+  transform: translateX(0%);
+}
+.projects__img {
+  object-fit: cover;
+  position: relative;
+  width: 26px;
+  height: 26px;
+  top: -60px;
+  left: 20px;
+  z-index: 1;
+  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+}
+.projects__content {
   position: absolute;
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #000;
+  bottom: 0;
   left: 0;
-  opacity: 0;
-  transition: all 0.5s;
-}
-.projects__item:hover::after {
-  opacity: 0.7;
+  right: 0;
+  overflow: auto;
+  max-height: 100%;
+  padding: 1rem;
+  transform: translateX(100%);
+  transition: transform 0.3s ease-in-out;
 }
 
 .link-style a, footer.middle a, footer.vertical a, footer.horizantal a {
@@ -230,7 +252,7 @@ footer.vertical .social-icons {
 footer.vertical .copyright {
   position: fixed;
   bottom: 4rem;
-  right: 3rem;
+  right: 1rem;
   transform: rotate(90deg) translate(-3rem, -5rem);
 }
 
