--- a/src/pages/_projects.scss
+++ b/src/pages/_projects.scss
@@ -1,53 +1,82 @@
-.projects-bgImg-container{
+.projects-bgImg-container {
     @include bgImage(40vh, $main-bgImage-path);
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    .projects__bio-image{
+
+    .projects__bio-image {
         text-align: center;
         font-size: 50px;
         margin-bottom: 1rem;
 
-        h2{
+        h2 {
             color: $primary-color;
         }
     }
 }
 
-.projects{
-    &__items{
-        // width: 100%;
-        // justify-content: center;
-        padding: 2rem 5rem;
-        gap: 1rem 0rem;
+.projects {
+    &__items {
+        padding: 1rem 1rem;
+        gap: 1rem 1rem;
         display: flex;
         flex-wrap: wrap;
-    };
-
-    &__item{
-        width: 100%;
-        cursor: pointer;
-        border-bottom: 5px solid $secondary-color;
-        position: relative;
-
-
-        img{
-            width: 100%;
-        }
-
-        &::after{
-            content: "";
-            height: 100%;
-            width: 100%;
-            background-color: $secondary-color;
-            position: absolute;
-            left: 0;
-            opacity: 0;
-            @include transition(0.5s)
-        }
-
-        &:hover::after{
-            opacity: 0.7;
-        }
+        justify-content: center
     }
+
+    ;
+
+    &__item {
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+        width: 600px;
+        height: 300px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: row;
+
+        p,h2{
+            color: black;
+        }
+
+
+        img {
+            width: 600px;
+            height: 300px;
+        }
+
+    }
+
+    ;
+
+    &__item:hover .projects__content {
+        transform: translateX(0%);
+    }
+
+    &__img {
+        object-fit: cover;
+        position: relative;
+        width: 26px;
+        height: 26px;
+        top: -60px;
+        left: 20px;
+        z-index: 1;
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    &__content {
+        position: absolute;
+        background-color: rgba(255, 255, 255, 0.7);
+        color: #000;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        overflow: auto;
+        max-height: 100%;
+        padding: 1rem;
+        transform: translateX(100%);
+        transition: transform 0.3s ease-in-out;
+    }
+
 }
