--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,7 +1,7 @@
-$primary-color:#2c7c07;
+$primary-color:#C0C0C0;
 $secondary-color:#1e453e;
 $text-color:#eee;
-$silver-color:#797979;
+$green-color:#2c7c07;
 
 $font-family:"segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
