--- a/src/main.css
+++ b/src/main.css
@@ -8,7 +8,7 @@
 .about-bgImg-container {
   height: 50vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(44, 124, 7, 0.2), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
+  background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -28,7 +28,7 @@
 }
 .about__bio-image h2 {
   font-size: 3rem;
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 .about__bio-image p {
   font-size: 1.2rem;
@@ -36,7 +36,10 @@
   margin: 2rem;
 }
 
-.about {
+.about h2, .about h3 {
+  color: #C0C0C0;
+}
+.about p {
   color: #eee;
 }
 .about__container {
@@ -46,7 +49,7 @@
 .about .about__job {
   background: #1e453e;
   padding: 0rem 2rem;
-  border-bottom: 5px solid;
+  border-bottom: 5px solid #eee;
 }
 .about .about__job h2, .about .about__job h3 {
   margin: 0.5rem 0rem;
@@ -60,7 +63,7 @@
 .contact-bgImg-container {
   height: 100vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(44, 124, 7, 0.2), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
+  background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
 }
@@ -92,7 +95,7 @@
   color: #eee;
 }
 .contact i {
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 
 .copyright {
@@ -102,7 +105,7 @@
 .bgImg-container {
   height: 100%;
   width: 100%;
-  background: linear-gradient(to right, rgba(44, 124, 7, 0.2), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
+  background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
 }
@@ -122,7 +125,7 @@ main {
   justify-content: center;
   text-align: center;
   padding: 1rem;
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 main h1 {
   width: 100%;
@@ -131,7 +134,7 @@ main h1 {
   border-bottom: 1px solid white;
 }
 main h1 span {
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 main h2 {
   color: #eee;
@@ -140,7 +143,7 @@ main h2 {
 .projects-bgImg-container {
   height: 40vh;
   width: 100%;
-  background: linear-gradient(to right, rgba(44, 124, 7, 0.2), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
+  background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
   display: flex;
@@ -153,7 +156,7 @@ main h2 {
   margin-bottom: 1rem;
 }
 .projects-bgImg-container .projects__bio-image h2 {
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 
 .projects__items {
@@ -372,14 +375,14 @@ footer.middle {
 body {
   font-family: "segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #1e453e;
-  background-color: #2c7c07;
+  background-image: radial-gradient(#1e453e, green);
   line-height: 1;
   height: 100vh;
 }
 
 a {
   text-decoration: none;
-  color: #2c7c07;
+  color: #C0C0C0;
 }
 
 h1, h2, h3 {
