--- a/src/main.css
+++ b/src/main.css
@@ -6,14 +6,11 @@
 }
 
 .about-bgImg-container {
-  height: 50vh;
+  height: 100%;
   width: 100%;
   background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
 }
 .about-bgImg-container .nav__list {
   padding: 0.7rem;
@@ -23,19 +20,34 @@
 }
 
 .about__bio-image {
-  color: #eee;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  color: #C0C0C0;
   text-align: center;
 }
 .about__bio-image h2 {
+  max-width: 20%;
   font-size: 3rem;
   color: #C0C0C0;
 }
 .about__bio-image p {
-  font-size: 1.2rem;
+  max-width: 90%;
+  font-size: 1.3rem;
   font-weight: 500;
   margin: 2rem;
+  line-height: 1.7;
+}
+.about__bio-image img {
+  max-width: 10%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
+.about {
+  display: flex;
+  flex-direction: column;
+}
 .about h2, .about h3 {
   color: #C0C0C0;
 }
@@ -43,6 +55,7 @@
   color: #eee;
 }
 .about__container {
+  max-width: 90%;
   width: 70vw;
   margin: 2rem auto;
 }
