--- a/src/pages/_about.scss
+++ b/src/pages/_about.scss
@@ -1,8 +1,6 @@
 .about-bgImg-container{
-    @include bgImage(50vh, $main-bgImage-path);
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+    @include bgImage(100%, $main-bgImage-path);
+
 
     .nav__list{
         padding: 0.7rem;
@@ -14,20 +12,35 @@
 }
 
 .about__bio-image{
-    color: $text-color;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    color: $primary-color;
     text-align: center;
     h2{
+        max-width: 20%;
         font-size: 3rem;
         color: $primary-color;
     }
     p{
-        font-size: 1.2rem;
+        max-width: 90%;
+        font-size: 1.3rem;
         font-weight: 500;
         margin: 2rem;
+        line-height: 1.7;
+        
+    }
+    img{
+        max-width: 10%;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 
 .about{
+    display: flex;
+    flex-direction: column;
+
     h2,h3{
         color: $primary-color;
     };
@@ -35,6 +48,7 @@
         color: $text-color;
     }
     &__container{
+        max-width: 90%;
         width: 70vw;
         margin: 2rem auto;
 
@@ -43,6 +57,7 @@
         background: lighten($secondary-color, $amount: 0);
         padding: 0rem 2rem;
         border-bottom: 5px solid $text-color;
+        
 
         h2,h3{
             margin: 0.5rem 0rem;
