--- a/src/components/_nav.scss
+++ b/src/components/_nav.scss
@@ -1,7 +1,7 @@
 .nav{
     padding: 1rem;
     height: 10vh;
-    
+
     &__list{
         text-align: right;
     }
@@ -18,8 +18,10 @@
         &:hover{
             color: $secondary-color;
         }
-        &--active{
-            color: $secondary-color;
-        }
+        
     }
+}
+
+.active{
+    color: $secondary-color;
 }
