--- a/src/pages/_contact.scss
+++ b/src/pages/_contact.scss
@@ -1,10 +1,10 @@
 .contact-bgImg-container{
     @include bgImage(100vh, $main-bgImage-path);
 
+}
 
-    nav{
-        height: 40vh;
-    }
+.contact-bgImg-container{
+    padding-top: 100px;
 }
 
 .contact{
@@ -22,7 +22,7 @@
 
     &__list{
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
