--- a/src/pages/_projects.scss
+++ b/src/pages/_projects.scss
@@ -5,6 +5,7 @@
     justify-content: space-between;
 
     .projects__bio-image {
+        margin-top: 50px;
         text-align: center;
         font-size: 50px;
         margin-bottom: 1rem;
