--- a/src/components/_responsive.scss
+++ b/src/components/_responsive.scss
@@ -7,6 +7,8 @@
         &__item{
             padding-right: 0.7rem;
         }
+
+
         .nav__link{
             font-size: 0.9rem;
         }
@@ -33,6 +35,7 @@
         &__item{
             padding-right: 1rem;
         }
+
         .nav__link{
             font-size: 1rem;
         }
@@ -55,6 +58,8 @@
         &__item{
             padding-right: 1.3rem;
         };
+        
+
         .nav__link{
             font-size: 1rem;
         };
@@ -74,11 +79,57 @@
 
 @include media-lg{
     .nav{
+        z-index: 999;
+        background-color: $secondary-color;
+        position: fixed;
+        display: block;
+        min-width: 100%;
+        max-height: 100%;
+        text-align: center;
         &__item{
             padding-right: 1.5rem;
         };
+
+        .nav__bg{
+            display: initial;
+        }
+
+        .nav__list{
+            position: fixed;
+            background: $green-color;
+            width: 100%;
+            height: 100%;
+            top: 60px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            transition: all .5s;
+            z-index: 999;
+            left: -100%;
+        }
+
+        .nav__item{
+            display: block;
+            min-width: 100%;
+            text-align: center;
+            border: 2px solid white;
+            border-radius: 50px;
+            margin: 5px;
+        }
+        
         .nav__link{
+            display: block;
+            min-width: 100%;
+            text-align: center;
             font-size: 1.5rem;
+            line-height: 2rem;
+            color: white;
+            @include transition(1s);
+
+            &:hover{
+                color: $secondary-color;
+            }
         };
     }
 
@@ -95,4 +146,60 @@
     .projects_item{
         width: 33%;
     }
+}
+
+
+.nav.responsive {
+    z-index: 999;
+    background-color: $secondary-color;
+    position: fixed;
+    display: block;
+    min-width: 100%;
+    max-height: 100%;
+    text-align: center;
+    &__item{
+        padding-right: 1.5rem;
+    };
+
+    .nav__bg{
+        display: initial;
+    }
+
+    .nav__list{
+        position: fixed;
+        background: $green-color;
+        width: 100%;
+        height: 100%;
+        top: 60px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        transition: all .5s;
+        z-index: 999;
+        left: -100%;
+    }
+
+    .nav__item{
+        display: block;
+        min-width: 100%;
+        text-align: center;
+        border: 2px solid white;
+        border-radius: 50px;
+        margin: 5px;
+    }
+    
+    .nav__link{
+        display: block;
+        min-width: 100%;
+        text-align: center;
+        font-size: 1.5rem;
+        line-height: 2rem;
+        color: white;
+        @include transition(1s);
+
+        &:hover{
+            color: $secondary-color;
+        }
+    };
 }
