--- a/src/main.css
+++ b/src/main.css
@@ -12,14 +12,9 @@
   background-position: center center;
   background-size: cover;
 }
-.about-bgImg-container .nav__list {
-  padding: 0.7rem;
-}
-.about-bgImg-container .nav__link {
-  font-size: 24px;
-}
 
 .about__bio-image {
+  padding-top: 50px;
   align-items: center;
   display: flex;
   flex-direction: column;
@@ -80,8 +75,9 @@
   background-position: center center;
   background-size: cover;
 }
-.contact-bgImg-container nav {
-  height: 40vh;
+
+.contact-bgImg-container {
+  padding-top: 100px;
 }
 
 .contact {
@@ -97,7 +93,7 @@
 }
 .contact__list {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
@@ -164,6 +160,7 @@ main h2 {
   justify-content: space-between;
 }
 .projects-bgImg-container .projects__bio-image {
+  margin-top: 50px;
   text-align: center;
   font-size: 50px;
   margin-bottom: 1rem;
@@ -233,12 +230,10 @@ main h2 {
 }
 
 footer.horizantal {
-  height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-end;
-  padding: 1rem;
 }
 footer.horizantal .social-icons {
   display: flex;
@@ -285,6 +280,17 @@ footer.middle {
 .nav {
   padding: 1rem;
   height: 10vh;
+  position: relative;
+}
+.nav #burger {
+  display: none;
+}
+.nav .nav__bg {
+  font-size: 2rem;
+  color: white;
+  float: right;
+  margin-right: 2rem;
+  display: none;
 }
 .nav__list {
   text-align: right;
@@ -294,7 +300,7 @@ footer.middle {
   padding: 1rem;
 }
 .nav__link {
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 500;
   text-transform: uppercase;
   transition: all 1s;
@@ -307,7 +313,15 @@ footer.middle {
   color: #1e453e;
 }
 
-@media screen and (min-width: 0px) {
+.nav #burger:checked ~ ul {
+  left: 0;
+}
+
+.nav #burger:checked ~ label.nav__bg i::before {
+  content: "\f00d";
+}
+
+@media screen and (max-width: 0px) {
   .nav {
     padding: 0.5rem;
   }
@@ -329,7 +343,7 @@ footer.middle {
     font-size: 1.2rem;
   }
 }
-@media screen and (min-width: 576px) {
+@media screen and (max-width: 576px) {
   .nav {
     padding: 0.7rem;
   }
@@ -351,7 +365,7 @@ footer.middle {
     font-size: 1.5rem;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (max-width: 768px) {
   .nav__item {
     padding-right: 1.3rem;
   }
@@ -367,12 +381,55 @@ footer.middle {
     font-size: 1.5rem;
   }
 }
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
+  .nav {
+    z-index: 999;
+    background-color: #1e453e;
+    position: fixed;
+    display: block;
+    min-width: 100%;
+    max-height: 100%;
+    text-align: center;
+  }
   .nav__item {
     padding-right: 1.5rem;
   }
+  .nav .nav__bg {
+    display: initial;
+  }
+  .nav .nav__list {
+    position: fixed;
+    background: #2c7c07;
+    width: 100%;
+    height: 100%;
+    top: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.5s;
+    z-index: 999;
+    left: -100%;
+  }
+  .nav .nav__item {
+    display: block;
+    min-width: 100%;
+    text-align: center;
+    border: 2px solid white;
+    border-radius: 50px;
+    margin: 5px;
+  }
   .nav .nav__link {
+    display: block;
+    min-width: 100%;
+    text-align: center;
     font-size: 1.5rem;
+    line-height: 2rem;
+    color: white;
+    transition: all 1s;
+  }
+  .nav .nav__link:hover {
+    color: #1e453e;
   }
   .projects_item {
     width: 50%;
@@ -381,11 +438,61 @@ footer.middle {
     flex-direction: row;
   }
 }
-@media screen and (min-width: 1600px) {
+@media screen and (max-width: 1600px) {
   .projects_item {
     width: 33%;
   }
 }
+.nav.responsive {
+  z-index: 999;
+  background-color: #1e453e;
+  position: fixed;
+  display: block;
+  min-width: 100%;
+  max-height: 100%;
+  text-align: center;
+}
+.nav.responsive__item {
+  padding-right: 1.5rem;
+}
+.nav.responsive .nav__bg {
+  display: initial;
+}
+.nav.responsive .nav__list {
+  position: fixed;
+  background: #2c7c07;
+  width: 100%;
+  height: 100%;
+  top: 60px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s;
+  z-index: 999;
+  left: -100%;
+}
+.nav.responsive .nav__item {
+  display: block;
+  min-width: 100%;
+  text-align: center;
+  border: 2px solid white;
+  border-radius: 50px;
+  margin: 5px;
+}
+.nav.responsive .nav__link {
+  display: block;
+  min-width: 100%;
+  text-align: center;
+  font-size: 1.5rem;
+  line-height: 2rem;
+  color: white;
+  transition: all 1s;
+}
+.nav.responsive .nav__link:hover {
+  color: #1e453e;
+}
+
 body {
   font-family: "segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   color: #1e453e;
