--- a/src/pages/_about.scss
+++ b/src/pages/_about.scss
@@ -1,17 +1,9 @@
 .about-bgImg-container{
     @include bgImage(100%, $main-bgImage-path);
-
-
-    .nav__list{
-        padding: 0.7rem;
-    }
-
-    .nav__link{
-        font-size: 24px;
-    }
 }
 
 .about__bio-image{
+    padding-top: 50px;
     align-items: center;
     display: flex;
     flex-direction: column;
