--- a/src/main.css
+++ b/src/main.css
@@ -69,7 +69,7 @@
 }
 
 .contact-bgImg-container {
-  height: 100vh;
+  height: 90vh;
   width: 100%;
   background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
@@ -111,8 +111,12 @@
   color: #eee;
 }
 
+.home {
+  overflow: hidden;
+}
+
 .bgImg-container {
-  height: 100%;
+  height: 90vh;
   width: 100%;
   background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
@@ -150,14 +154,14 @@ main h2 {
 }
 
 .projects-bgImg-container {
-  height: 40vh;
+  height: 80vh;
   width: 100%;
   background: linear-gradient(to bottom, rgba(30, 69, 62, 0.8), rgba(44, 124, 7, 0.1)), url("./img/background.jpg");
   background-position: center center;
   background-size: cover;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
 }
 .projects-bgImg-container .projects__bio-image {
   margin-top: 50px;
@@ -220,61 +224,40 @@ main h2 {
   transition: transform 0.3s ease-in-out;
 }
 
-.link-style a, footer.middle a, footer.vertical a, footer.horizantal a {
+.link-style a, .vertical a, .horizantal a {
   color: white;
   padding: 0.4rem;
   transition: all 1sn;
 }
-.link-style a:hover, footer.middle a:hover, footer.vertical a:hover, footer.horizantal a:hover {
+.link-style a:hover, .vertical a:hover, .horizantal a:hover {
   color: #1e453e;
 }
 
-footer.horizantal {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-end;
-}
-footer.horizantal .social-icons {
-  display: flex;
-  flex-direction: row;
+.horizantal .social-icons {
   position: fixed;
   bottom: 1rem;
 }
-footer.horizantal .copyright {
+.horizantal .copyright {
   position: fixed;
   bottom: 2rem;
   right: 3rem;
 }
 
-footer.vertical {
+.vertical {
   height: 10vh;
-  display: flex;
-  justify-content: space-between;
-  align-items: flex-end;
   padding: 1rem;
 }
-footer.vertical .social-icons {
+.vertical .social-icons {
   display: flex;
   flex-direction: column;
   position: fixed;
   bottom: 1rem;
 }
-footer.vertical .copyright {
+.vertical .copyright {
   position: fixed;
   bottom: 4rem;
   right: 1rem;
   transform: rotate(90deg) translate(-3rem, -5rem);
-}
-
-footer.middle {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  margin: 1rem;
-  gap: 1rem;
-  margin-top: 3rem;
 }
 
 .nav {
