--- a/src/abstracts/_variables.scss
+++ b/src/abstracts/_variables.scss
@@ -1,7 +1,7 @@
-$primary-color:#C0C0C0;
-$secondary-color:#1e453e;
+$primary-color:#DFEDF2;
+$secondary-color:#1D402F;
 $text-color:#eee;
-$green-color:#2c7c07;
+$green-color:#2F7373;
 
 $font-family:"segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 
