--- a/src/components/_nav.scss
+++ b/src/components/_nav.scss
@@ -1,8 +1,8 @@
 .nav{
-    // position: fixed;
     padding: 1rem;
     height: 10vh;
     position: relative;
+    background-color: #2F7373;
 
     #burger{
         display: none;
@@ -14,7 +14,6 @@
         font-size: 2rem;
         color: white;
         float: right;
-        // line-height: 80px;
         margin-right: 2rem;
         display: none;
     }
