--- a/src/pages/_about.scss
+++ b/src/pages/_about.scss
@@ -1,61 +1,73 @@
-.about-bgImg-container{
+.about-bgImg-container {
     @include bgImage(100%, $main-bgImage-path);
 }
 
-.about__bio-image{
+.about__bio-image {
     padding-top: 50px;
     align-items: center;
     display: flex;
     flex-direction: column;
     color: $primary-color;
     text-align: center;
-    h2{
-        max-width: 20%;
-        font-size: 3rem;
+
+    h2 {
+        margin-top: 10px;
+        max-width: 200px;
+        font-size: 2rem;
         color: $primary-color;
     }
-    p{
+
+    p {
         max-width: 90%;
         font-size: 1.3rem;
         font-weight: 500;
         margin: 2rem;
         line-height: 1.7;
-        
+
     }
-    img{
+
+    img {
         max-width: 10%;
         margin-left: auto;
         margin-right: auto;
     }
 }
 
-.about{
+.about {
     display: flex;
     flex-direction: column;
 
-    h2,h3{
+    h2,
+    h3 {
+        max-width: 100%;
+        word-wrap: break-word;
         color: $primary-color;
-    };
-    p{
+    }
+
+    p {
         color: $text-color;
     }
-    &__container{
+
+    &__container {
         max-width: 90%;
         width: 70vw;
         margin: 2rem auto;
 
     }
-    .about__job{
+
+    .about__job {
         background: lighten($secondary-color, $amount: 0);
         padding: 0rem 2rem;
         border-bottom: 5px solid $text-color;
-        
 
-        h2,h3{
+
+        h2,
+        h3 {
             margin: 0.5rem 0rem;
             font-size: 3rem;
         }
-        p{
+
+        p {
             text-align: justify;
             font-size: 1.5rem;
         }
