--- a/src/abstracts/_mixin.scss
+++ b/src/abstracts/_mixin.scss
@@ -12,7 +12,7 @@
         rgba($green-color, 0.1) 
     ),url($url);
     background-position: center center;
-    
+    background-size: cover;    
 };
 
 
