--- a/src/components/_responsive.scss
+++ b/src/components/_responsive.scss
@@ -56,7 +56,7 @@
         position: fixed;
         display: block;
         min-width: 100%;
-        max-height: 100%;
+        max-height: 100%; 
         text-align: center;
         &__item{
             padding-right: 1.5rem;
@@ -70,8 +70,8 @@
             position: fixed;
             background: $green-color;
             width: 100%;
-            height: 100%;
-            top: 60px;
+            min-height: calc(100vh - 55px);
+            top: 55px;
             display: flex;
             flex-direction: column;
             align-items: center;
