--- a/src/pages/_contact.scss
+++ b/src/pages/_contact.scss
@@ -1,5 +1,5 @@
 .contact-bgImg-container{
-    @include bgImage(90vh, $main-bgImage-path);
+    @include bgImage(calc(100vh - 56px), $main-bgImage-path);
 
 }
 
