--- a/src/pages/_home.scss
+++ b/src/pages/_home.scss
@@ -1,5 +1,5 @@
 .bgImg-container{
-    @include bgImage(90vh, $main-bgImage-path);
+    @include bgImage(calc(100vh - 56px), $main-bgImage-path);
 
 }
 
